--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,8 +3,8 @@
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/Main.Main
+GameDefaultMap=/Game/Maps/Main.Main
 GlobalDefaultGameMode="/Script/UnrealTestProject.UnrealTestProjectGameMode"
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -116,5 +116,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
