Add IRequireInput interface; Refactor; Add DrivingComponent; Add MyCar
- Add IRequireInput interface to provide method for initializing input for components that require input
- Implement IRequreInput interface in AxisMovement class
- Change OnTriggerBeginOverlap method signature of OpenableDoor class
- Replace Add delegate assigning method with AddDynamic in OpenableDoor class
- Add DrivingComponent to get in cars
- Move get-in-car logic from ThirdPersonCharacter blueprint to DrivingComponent class
- Add MyCar to support getting in/out of cars
- Move input login from Car blueprint to MyCar class

--- a/UnrealTestProject.uproject
+++ b/UnrealTestProject.uproject
@@ -3,16 +3,17 @@
 	"EngineAssociation": "4.22",
 	"Category": "",
 	"Description": "",
-	"Modules": [
-		{
-			"Name": "UnrealTestProject",
-			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine",
-				"AIModule",
-				"CoreUObject"
-			]
-		}
-	]
+  "Modules": [
+    {
+      "Name": "UnrealTestProject",
+      "Type": "Runtime",
+      "LoadingPhase": "Default",
+      "AdditionalDependencies": [
+        "Engine",
+        "AIModule",
+        "CoreUObject",
+        "PhysXVehicles"
+      ]
+    }
+  ]
 }
